--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p> </p>
                 <p> </p>
 
-                <img src="ulearns.png" alt="Italian Trulli" style="width:300px;height:300px;">
+                <img src="ulearns.png" alt="Italian Trulli" id="ulearnlogo" style="width:300px;height:300px;">
 
                 <p> </p>
                 <p> </p>
