change social media link position navbar to footer

--- a/index.html
+++ b/index.html
@@ -1,139 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="icon" href="https://media.licdn.com/dms/image/D5603AQGQ9eIdOcWI3g/profile-displayphoto-shrink_400_400/0/1678713768033?e=1692230400&v=beta&t=OyshgwdN2rFDufk3Q6632bOwa10900GBldLOdaSIMm4" type="image/icon type">
-
-    <link rel="stylesheet" href="style.css">
-    <title>Geeksphere</title>
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link
+      rel="icon"
+      href="https://media.licdn.com/dms/image/D5603AQGQ9eIdOcWI3g/profile-displayphoto-shrink_400_400/0/1678713768033?e=1692230400&v=beta&t=OyshgwdN2rFDufk3Q6632bOwa10900GBldLOdaSIMm4"
+      type="image/icon type" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+    <title>GeekSphere</title>
+  </head>
+  <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" id="header" href="#">Geeksphere</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#intro">Introduction</a></li>
-                <li class="nav-item"><a class="nav-link" href="#profiles">Profiles</a></li>
-                <li class="nav-item"><a class="nav-link" href="#events">Events</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      connect
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="https://www.linkedin.com/in/geeksphere-7621492b8?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"></i>   linkedin</a></li>
-                      <li><a class="dropdown-item" href="https://github.com/Geeksphere"><i class="fa fa-github"></i>   github</a></li>
-                      <li><a class="dropdown-item text-rose" href="https://www.instagram.com/geeksphere_official?igsh=b2tvNTVtbTlzcG5p"><i class="fa fa-instagram"></i>  instagram </a></li>
-                      <li><a class="dropdown-item text-green" href="https://chat.whatsapp.com/KKH0HGQBFFY7F2pw7ta4Cu"><i class="fa fa-whatsapp"></i>  whatsapp</a></li>
-                      <li><a class="dropdown-item text-blue" href=""> <i class="fa fa-bell"></i>  twiter</a></li>
-                      <li><a class="dropdown-item text-voilet" href=""><i class="fa fa-Discode"></i>   discord </a></li>
-
-
-
-                    </ul>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand ml-4" id="header" href="#">Geeksphere</a>
+      <button
+        class="navbar-toggler mr-3"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-5">
+          <li class="nav-item">
+            <a class="nav-link" href="#intro">Introduction</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#profiles">Profiles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#events">Events</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <!-- Introduction Section -->
     <section id="intro" class="blues-theme">
-        <div class="container">
-            <h1>Welcome to GEEKSPHERE</h1>
-            <p>INNOVATE | INSPIRE | IGNITE</p>
-            <p>Explore the world of technology.</p>
-        </div> 
+      <div class="container">
+        <h1>Welcome to GEEKSPHERE</h1>
+        <p>INNOVATE | INSPIRE | IGNITE</p>
+        <p>Explore the world of technology.</p>
+      </div>
     </section>
 
     <!-- Profiles Section -->
     <section id="profiles" class="blue-theme">
-        <div class="container">
-            <h2>Let's know about Geeksphere.</h2>
-            <P>Geeksphere is a tech community initiative from our campus that aims to transition from a non-productive pedagogy characterized by rote learning and theoretical assignments to a productive, value-based system.
-                This system rewards real-world problem-solving, creativity, and collaboration, preparing students not just for exams but for life and career challenges in the rapidly evolving world.</P>
+      <div class="container">
+        <h2>Let's know about Geeksphere.</h2>
+        <p>
+          Geeksphere is a tech community initiative from our campus that aims to
+          transition from a non-productive pedagogy characterized by rote
+          learning and theoretical assignments to a productive, value-based
+          system. This system rewards real-world problem-solving, creativity,
+          and collaboration, preparing students not just for exams but for life
+          and career challenges in the rapidly evolving world.
+        </p>
+        <h2>OUR MISSION</h2>
+        <p>
+          1. Skill Development: Geeksphere focuses on empowering its members
+          with the latest technical skills and knowledge.Through workshops,
+          webinars, and hands-on coding sessions
+        </p>
+        <p>
+          2. Knowledge Enhancement: The community serves as a platform for
+          continuous learning. Members engage in discussions, share resources
+          thereby expanding their knowledge horizons and staying abreast of
+          industry trends.
+        </p>
+        <p>
+          3. Networking and Collaboration: Geeksphere provides a conducive
+          environment for tech enthusiasts to connect and collaborate. By
+          fostering meaningful relationships, members can find like-minded
+          individuals, potential mentors,
+        </p>
+        <p>
+          4. Project Development: One of the community's key initiatives is to
+          encourage project development. Members are encouraged to work together
+          on innovative projects, allowing them to apply their skills, learn
+          from practical experiences, and contribute to the tech community.
+        </p>
+        <p>
+          5.At Geeksphere, we are dedicated to fostering cultural development
+          within our community. We believe in cultivating a unique atmosphere
+          based on mutual respect,.In addition, Geeksphere serves as a vibrant
+          virtual hangout for tech enthusiasts, providing a welcoming space
+          where like-minded individuals gather to share their experiences, and
+          ideas. It's a place where the spirit of innovation meets collaborative
+          learning, creating
+        </p>
+        <h2>community partners</h2>
+        <p></p>
+        <p></p>
+        <img
+          src="ulearns.png"
+          alt="Italian Trulli"
+          id="ulearnlogo"
+          style="width: 300px; height: 300px" />
+        <p></p>
+        <p></p>
+        <p>
+          MuLearn : Inspired by the Silicon Valley movement, µLearn aims to
+          foster an environment that nurtures groundbreaking ideas and drives
+          technological advancements. µLearn is an innovative hub dedicated to
+          future technologies, with the vision of transforming Kerala into a
+          knowledge-based, sustainable, and innovation-centric state
+        </p>
 
-
-                <h2>OUR MISSION</h2>
-                <P>
-                    1. Skill Development: Geeksphere focuses on empowering its 
-                    members with the latest technical skills and knowledge.Through 
-                    workshops, webinars, and hands-on coding sessions 
-                </P>
-                <p>
-                    2. Knowledge Enhancement: The community serves as a platform for 
-                    continuous learning. Members engage in discussions, share 
-                    resources thereby expanding their knowledge horizons and staying 
-                    abreast of industry trends. 
-                   </p> 
-                   <p>3. Networking and Collaboration: Geeksphere provides a 
-                    conducive environment for tech enthusiasts to connect and 
-                    collaborate. By fostering meaningful relationships, members can find 
-                    like-minded individuals, potential mentors, 
-                   </p>
-                   <p> 4. Project Development: One of the community's key initiatives is to 
-                    encourage project development. Members are encouraged to work 
-                    together on innovative projects, allowing them to apply their skills, 
-                    learn from practical experiences, and contribute to the tech 
-                    community. 
-                    </p>
-                    <p>5.At Geeksphere, we are dedicated to fostering cultural 
-                    development within our community. We believe in cultivating a 
-                    unique atmosphere based on mutual respect,.In addition, 
-                    Geeksphere serves as a vibrant virtual hangout for tech 
-                    enthusiasts, providing a welcoming space where like-minded 
-                    individuals gather to share their experiences, and ideas. It's a place 
-                    where the spirit of innovation meets collaborative learning, creating</P>
-</p>
-
-                <h2>community partners</h2>
-
-                <p> </p>
-                <p> </p>
-
-                <img src="ulearns.png" alt="Italian Trulli" id="ulearnlogo" style="width:300px;height:300px;">
-
-                <p> </p>
-                <p> </p>
-
-                <p>                                       MuLearn : Inspired by the Silicon Valley movement, µLearn aims to foster an environment that nurtures groundbreaking ideas and drives technological advancements.
-                    µLearn is an innovative hub dedicated to future technologies, with the vision of transforming Kerala into a knowledge-based, sustainable, and innovation-centric state</p>
-            <!-- Add profiles content here -->
-        </div>
+        <!-- Add profiles content here -->
+      </div>
     </section>
 
     <!-- Events Section -->
     <section id="events" class="events-section">
-        <div class="container">
-            <h2>Upcoming Events</h2>
-            <div id="eventTiles" class="event-tiles-containercol">
-                <!-- Dynamic event tiles will be added using JavaScript -->
-            </div>
+      <div class="container">
+        <h2>Upcoming Events</h2>
+        <div id="eventTiles" class="event-tiles-containercol">
+          <!-- Dynamic event tiles will be added using JavaScript -->
         </div>
+      </div>
     </section>
-    <section id="contact"class="contact-section">
-
-
-        <div class="container">
-            <h2></h2>
-            <div class="row">
-
-            </div>
-        </div>
+    <section id="contact" class="contact-section">
+      <div class="container">
+        <h2></h2>
+        <div class="row"></div>
+      </div>
     </section>
 
+    <!-- Footer Section -->
+    <footer class="row g-0">
+      <div
+        class="col-md-6 p-3 d-flex justify-content-center flex-column align-items-center">
+        <h4>GeekSphere</h4>
+        <span> College of Engineering Muttathara, Tvm, 695506 </span>
+      </div>
+      <div
+        class="col-md-6 p-3 d-flex justify-content-center align-items-center">
+        <ul class="d-flex list-unstyled mb-0">
+          <li class="m-2">
+            <a
+              href="https://www.linkedin.com/in/geeksphere-7621492b8?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+              ><i class="fa-brands fa-linkedin fa-xl"></i
+            ></a>
+          </li>
+          <li class="m-2">
+            <a href="https://github.com/Geeksphere"
+              ><i class="fa-brands fa-github fa-xl"></i
+            ></a>
+          </li>
+          <li class="m-2">
+            <a
+              href="https://www.instagram.com/geeksphere_official?igsh=b2tvNTVtbTlzcG5p"
+              ><i class="fa-brands fa-instagram fa-xl"></i
+            ></a>
+          </li>
+          <li class="m-2">
+            <a href="https://chat.whatsapp.com/KKH0HGQBFFY7F2pw7ta4Cu"
+              ><i class="fa-brands fa-whatsapp fa-xl"></i
+            ></a>
+          </li>
+          <li class="m-2">
+            <a href=""><i class="fa-brands fa-twitter fa-xl"></i></a>
+          </li>
+          <li class="m-2">
+            <a href=""><i class="fa-brands fa-discord fa-xl"></i></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous" />
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
